# ba2

conjuctor/: CMakeLists.txt
conjuctor/src/: conjuctor.cpp
groundSeparator/: CMakeLists.txt
groundSeparator/src/: groundSeparator.cpp
groundSeparator2.0/: CMakeLists.txt
groundSeparator2.0/src/: groundSeparator2.0.cpp
groundSeparator2.5/: CMakeLists.txt
groundSeparator2.5/src/: groundSeparator2.5.cpp
pointClouds/: ground.pcd  ground.ply  streetInliers.pcd  streetInliers2.pcd  streetOutliers.pcd  streetOutliers2.pcd  streetSampled.ply
pointClouds/rezults/: 0ground.pcd  1ground.pcd  2ground.pcd  3ground.pcd
src/: main.cpp
statisticalFilter/: CMakeLists.txt
statisticalFilter/src/: statisticalFilter.cpp
superVoxels/: CMakeLists.txt
superVoxels/src/: superVoxels.cpp
tableRezults1/rezults/: 0ground.pcd  1ground.pcd  2ground.pcd  3ground.pcd
tableRezults2/rezults/: 0ground.pcd  1ground.pcd  2ground.pcd  3ground.pcd
viewer/: CMakeLists.txt
viewer/src/: viewer.cpp
voxelisation/: CMakeLists.txt
voxelisation/src/: voxelisation.cpp
